Fixed alignment of resumes

--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,9 @@ h1 {
     margin-bottom: 2em;
 }
 
-#resumes {
-    padding-left: 15%;
+.resumes {
+    margin: auto;
+    text-align: center;
 }
 
 #landing {
